# lm-evals

./: .gitignore  README.md  codecov.yml  pyproject.toml
.github/workflows/: test.yml
examples/: run_eval.py  run_judge_eval.py  run_nim_eval.py
infra/docker/: Dockerfile
infra/k8s/: job.yaml  pvc.yaml  secret.yaml
infra/scripts/: run_local.sh
infra/slurm/: run_evaluation.sh
lm_evals/: __init__.py
lm_evals/benchmarks/: __init__.py  agent.py  judge.py  rag.py  similarity.py  traditional.py
lm_evals/core/: benchmark.py  evaluator.py  metrics.py  model.py
lm_evals/models/: __init__.py  nvidia.py  openai.py
tests/integration/: test_end_to_end.py
tests/unit/benchmarks/: test_judge_benchmark.py  test_similarity_benchmark.py
tests/unit/core/: test_evaluator.py
tests/unit/models/: test_openai_model.py
